--- a/keyboard-shortcuts.qmd
+++ b/keyboard-shortcuts.qmd
@@ -2,7 +2,7 @@
 
 ![Imaged sources from https://xkcd.com/2150/](https://imgs.xkcd.com/comics/xkeyboarcd.png){title="The key caps use LCD displays for all the vowels, so they can automatically adjust over the years to reflect ongoing vowel shifts while allowing you to keep typing phonetically."}
 
-Keyboard shortcuts tend to make our lives easier. Some that you might already be familiar with in day to day life include quickly saving (Cmd + S or Ctrl + S), or Undo (Cmd + Z or Ctrl + Z).
+Keyboard shortcuts tend to make our lives easier. Some that you might already be familiar with in day to day life are: quickly saving (Cmd + S or Ctrl + S), or Undo (Cmd + Z or Ctrl + Z).
 
 There are many keyboard shortcuts you can access in R, this section provides a brief tour of them, and why you might want to use them.
 
@@ -19,17 +19,17 @@ There are many keyboard shortcuts you can access in R, this section provides a b
 
 <!-- TODO -->
 
-## Gifs of the action
+<!-- ## Gifs of the action -->
 
-### render document
-### Insert Chunk
-### Run Current Chunk
-### Jump to
-### Create multiple cursors
-### Delete the current line
-### Un/Comment out a line 
-### Reformat Section 
-### Show Keyboard Shortcut Reference
+<!-- ### render document -->
+<!-- ### Insert Chunk -->
+<!-- ### Run Current Chunk -->
+<!-- ### Jump to -->
+<!-- ### Create multiple cursors -->
+<!-- ### Delete the current line -->
+<!-- ### Un/Comment out a line  -->
+<!-- ### Reformat Section  -->
+<!-- ### Show Keyboard Shortcut Reference -->
 
 ## Table of Common Shortcuts
 
@@ -51,8 +51,11 @@ Below is a small table of tasks you can perform with keyboard
 
 - The [Rstudio Cheat Sheet](https://rstudio.github.io/cheatsheets/html/rstudio-ide.html#keyboard-shortcuts) has an index of shortcuts. 
 - This [help file](https://support.posit.co/hc/en-us/articles/206382178-Customizing-Keyboard-Shortcuts-in-the-RStudio-IDE) has a guide to customising keyboard shortcuts.
+- The [shrtcts](https://github.com/gadenbuie/shrtcts) R package for creating new shortcuts.
 
 ## Your Turn {.exercise}
 
-- Using the Keyboard Shortcut Reference, find the keyboard shortcut for inserting a pipe character ( `%>%` or `|>`)
-- Spend 3 minutes practicing these commands in a document.
+- In your **awesome** quarto document
+  - Oractice using the Keyboard Shortcut Reference and find the keyboard shortcut for inserting a pipe character ( `%>%` or `|>`)
+  - Spend 3 minutes practicing these commands.
+- Ask Nick to demonstrate some of his favourite shortcut combos
