--- a/keyboard-shortcuts.qmd
+++ b/keyboard-shortcuts.qmd
@@ -53,9 +53,11 @@ Below is a small table of tasks you can perform with keyboard
 - This [help file](https://support.posit.co/hc/en-us/articles/206382178-Customizing-Keyboard-Shortcuts-in-the-RStudio-IDE) has a guide to customising keyboard shortcuts.
 - The [shrtcts](https://github.com/gadenbuie/shrtcts) R package for creating new shortcuts.
 
-## Your Turn {.exercise}
+::: {.callout-note title="Your Turn"}
 
 - In your **awesome** quarto document
   - Oractice using the Keyboard Shortcut Reference and find the keyboard shortcut for inserting a pipe character ( `%>%` or `|>`)
   - Spend 3 minutes practicing these commands.
 - Ask Nick to demonstrate some of his favourite shortcut combos
+
+:::
