--- a/pdf-html-word.qmd
+++ b/pdf-html-word.qmd
@@ -85,7 +85,8 @@ format:
     embed-resources: true
 ```
 
+::: {.callout-note title="Your Turn"}
 
-## Your Turn {.exercise}
+1. Using your “01-qmd-examples.qmd” Quarto document you were using earlier, generate three reports, one as HTML, one as PDF, and one as microsoft word. Remember, if you are having PDF problems, see the [installation chapter](installation) note on installing LaTeX with the R package, `tinytex`.
 
-1. Using your **awesome** Quarto document you created earlier, generate three reports, one as HTML, one as PDF, and one as microsoft word. Remember, if you are having PDF problems, see the [installation chapter](installation) note on installing \LaTeX\ with the R package, `tinytex`.
+:::
