--- a/rstudio.qmd
+++ b/rstudio.qmd
@@ -45,7 +45,7 @@ We saw a bit of what an Quarto script does.
 - Plots are where your plots appear, you can view packages, see the help files.
 - The environment / history pane contains the list of things you have created, and the past commands that you have run.
 
-## Exercise: RStudio default options {.exercise}
+::: {.callout-note title = "Your Turn: RStudio default options"}
 
 To first get set up, I highly recommend changing the following setting
 
@@ -77,6 +77,8 @@ This means that you won't save the objects and other things that you create in y
 Your "history" is the commands that you have entered into R.
 
 Additionally, not saving your history means that you won't be relying on things that you typed in the last session, which is a good habit to get into!
+
+:::
 
 ## Learning more
 
