--- a/why-qmd.qmd
+++ b/why-qmd.qmd
@@ -18,9 +18,11 @@ The goal of this section is to briefly discuss why we want to learn Quarto, the 
 -   [Learn how to use Markdown](https://www.markdowntutorial.com/)
 -   Think about why you want to use Markdown
 
-## Your Turn {.exercise}
+::: {.callout-note title="Your Turn"}
 
 1.  **Why are we here** Form small groups of 2-4 with your neighbours and discuss how you expect learning Quarto might benefit you.
+
+:::
 
 ## Reproducibility is a problem
 
@@ -36,13 +38,15 @@ So what can we do about it?
 
 The idea of literate programming shines some light on this dark area of science. This is an idea from [Donald Knuth](https://en.wikipedia.org/wiki/Donald_Knuth) where you combine your text with your code output to create a document. This is a *blend* of your literature (**text**), and your programming (**code**), to create something that you can read from top to bottom. Imagine your paper - the introduction, methods, results, discussion, and conclusion, and all the bits of code that make each section. With Quarto, you can see all the pieces of your data analysis all together.
 
-#### Some history {.history}
+::: {.callout-caution title="Some history: Quarto, Rmarkdown, Sweave" collapse="true"}
 
-This was a popular idea, and it has had some interesting discussion and contributions over the years. Notably, in the R ecosystem, the *Sweave* (S+weave) program provided a way to write text and code together. As with any technology, there were some speedbumps with using Sweave, and some of the reasons we are not teaching it now is because:
+Literate programming was a popular idea, and it has had some interesting discussion and contributions over the years. Notably, in the R ecosystem, the [*Sweave*](https://en.wikipedia.org/wiki/Sweave), (The [**S language**](https://en.wikipedia.org/wiki/S_(programming_language)) + weaving together text and code) program provided a way to write text and code together. As with any technology, there were some speedbumps with using Sweave, and some of the reasons we are not teaching it now is because:
 
 -   It uses a form of LaTeX, which provides great flexibility at the cost of complexity.
 -   Printing figures involves additional work
 -   There isn't a way to save (cache) your work. Every analysis has to be repeated from start to finish. This was time consuming.
+
+:::
 
 ## Markdown as a new player to legibility
 
@@ -142,9 +146,11 @@ But with Quarto, we have this general interface, where Quarto can talk to differ
 
 ![Quarto is a separate program](figs/quarto-all.jpeg)
 
-## Your Turn {.exercise}
+::: {.callout-note title="Your Turn"}
 
 1.  **Learn to use Markdown** In your small groups, spend five minutes working through this [brief online Markdown tutorial](https://www.markdowntutorial.com/)
+
+:::
 
 # Quarto helps complete the solution to the reproducibility problem
 
